# segway_full

./: README.md
segway_v33/segway_description/launch/: description.launch
segway_v33/segway_description/urdf/: accessories.urdf.xacro  description.xacro
segway_v33/segway_description/urdf/NAVIGATOR_ELITE/: rmp.urdf.xacro
segway_v33/segway_description/urdf/RMP_110/: rmp.urdf.xacro
segway_v33/segway_description/urdf/RMP_110_WIDE/: rmp.urdf.xacro
segway_v33/segway_description/urdf/RMP_210/: rmp.urdf.xacro
segway_v33/segway_description/urdf/RMP_220/: rmp.urdf.xacro
segway_v33/segway_description/urdf/RMP_440LE/: rmp.urdf.xacro
segway_v33/segway_description/urdf/RMP_440SE/: rmp.urdf.xacro
segway_v33/segway_description/urdf/RMP_OMNI/: rmp.urdf.xacro
segway_v33/segway_ros/src/segway/: crc16.py  faultlog_parser.py  io_eth.py  io_usb.py  move_base.py  segway_comm.py~  segway_control_marker.py  segway_data_classes.py  segway_system_wd.py  segway_teleop.py  system_defines.py  utils.py
segway_v33/segway_v3_config/: segway_config.bash  segway_config.bash~
segway_v3_Robot/segway_bringup/launch/localization/: segway_odometry.launch
segway_v3_Robot/segway_bringup/launch/sensors/: segway_laser_merger.launch  segway_sensors.launch
segway_v3_Robot/segway_bringup/launch/sensors/config/: camera_cal_old.yml  laser_merger.yaml
segway_v3_Robot/segway_sensor_filters/ira_laser_tools/src/: laserscan_multi_merger.cpp
segway_v3_Robot/segway_sensor_filters/range_sensor_filters/: CHANGELOG.rst  package.xml
segway_v3_Robot/segway_sensor_filters/range_sensor_filters/include/range_sensor_filters/: laser_scan_footprint_filter.h
segway_v3_Robot/segway_sensor_filters/range_sensor_filters/src/: range_sensor_filters.cpp
segway_v3_Robot/segway_upstart/: CMakeLists.txt
segway_v3_Robot/segway_upstart/src/segway_upstart/: job.py  providers.py
segway_v3_Robot/segway_upstart/templates/: job-start.em
segway_v3_Robot/ublox/ublox/: CHANGELOG.rst
segway_v3_Robot/ublox/ublox_gps/: CHANGELOG.rst
segway_v3_Robot/ublox/ublox_gps/launch/: ublox_gps.launch
segway_v3_Robot/ublox/ublox_msgs/: CHANGELOG.rst
segway_v3_Robot/ublox/ublox_serialization/: CHANGELOG.rst
segway_v3_desktop/: README.md
segway_v3_desktop/segway_dashboard/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
segway_v3_desktop/segway_dashboard/plugins/: plugin.xml
segway_v3_desktop/segway_dashboard/scripts/: segway_dashboard
segway_v3_desktop/segway_dashboard/src/segway_dashboard/: dashboard.py
segway_v3_desktop/segway_remote_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
segway_v3_desktop/segway_remote_teleop/launch/: segway_remote_teleop.launch
segway_v3_desktop/segway_v3_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
segway_v3_desktop/segway_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
segway_v3_desktop/segway_viz/launch/: view_model.launch  view_robot.launch
segway_v3_desktop/segway_viz/rviz/: model.rviz  robot.rviz  robot_.rviz  robot_assisted_teleop.rviz  robot_map_nav.rviz  robot_mapless_nav.rviz  robot_mapping.rviz  robot_teleop.rviz
segway_v3_simulator/segway_gazebo/launch/: segway_empty_world.launch  segway_empty_world.launch~  segway_playpen.launch  spawn_segway.launch  spawn_segway.launch~
segway_v3_simulator/segway_gazebo/worlds/: newExpWorld.world
segway_v3_simulator/segway_sim_control/config/control/: RMP_220_control.yaml
segway_v3_simulator/segway_sim_control/launch/: RMP_220_control.launch
