<?xml version="1.0"?>
<package>
  <name>segway_remote_teleop</name>
  <version>0.0.1</version>
  <description>Remote teleop configuration for Segway RMP V3 platforms</description>
  <maintainer email="rmp@stanleyinnovation.com">Patrick Hussey</maintainer>
  <url type="website">http://ros.org/wiki/segway_rmp_v3</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend>joy</run_depend>

  <export>
  </export>
</package>
