<package>
    <name>range_sensor_filters</name>
    <version>1.0.0</version>
    <description>Segway perception filters for range sensors</description>

    <maintainer email="RMP@stanleyinnovation.com">Stanley Innovation, Inc.</maintainer>
    <license>BSD</license>
    <url type="website">http://ros.org/wiki/segway_rmp_v3</url>
    <author>Patrick Hussey</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>filters</build_depend>
    <build_depend>laser_geometry</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_filters</build_depend>
                            
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>filters</run_depend>
    <run_depend>laser_geometry</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_filters</run_depend>

    <export>
        <filters plugin="${prefix}/range_sensor_filters_plugins.xml"/>
    </export>
</package>
